# rag-utils

./: .gitignore  Dockerfile  README.md  build_image.sh  build_ir.py  main.py  pyproject.toml  render_chunk.py
models/: get_model.py
tests/: test_chunk.py  test_classify.py  test_convert.py  test_rerank.py
utils/: chunker.py  classifier.py  converter.py  reranker.py
utils/parsers/: dataclass_model.py  json_instance.py  json_schema.py  pydantic_model.py  xml_instance.py  xsd_schema.py  yaml_instance.py
