[project]
name = "rag-utils"
version = "0.1.0"
description = "A set of utilities to help in building advanced RAG system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0+cpu",
    "huggingface-hub",
    "anyio>=4.12.1",
    "fastapi>=0.128.0",
    "flashrank[listwise]>=0.2.10",
    "lxml>=6.0.2",
    "onnxruntime==1.19.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.40.0",
]
